# BLACKWING

./: README  README.md
BW_arduino/lib/ViRHas/: ViRHas.cpp  ViRHas.h
BW_arduino/lib/ViRHas2.0/: ViRHas2.0.cpp  ViRHas2.0.h
BW_arduino/src/: main.ino
BW_jetson/: CMakeLists.txt  start_robot.sh
BW_jetson/audio/: volume_monitor.py
BW_jetson/include/: globals.h  input_manager.h  main.h  mood.h  serial.h  threshold_control.h  tracks_manager.h
BW_jetson/include/emotions/: anger.h  anticipation.h  disgust.h  fear.h  idle.h  joy.h  sadness.h  surprise.h  trust.h
BW_jetson/sonar/: closeness_manager.c  closeness_manager.h
BW_jetson/speaker/: speaker_server.py
BW_jetson/src/: globals.c  input_manager.c  main.c  mood.c  serial.c  threshold_control.c  tracks_manager.c
BW_jetson/src/emotions/: anger.c  anticipation.c  disgust.c  fear.c  idle.c  joy.c  sadness.c  surprise.c  trust.c
BW_jetson/touch/: touch_manager.c  touch_manager.h
BW_jetson/vision/: video_monitor.py
Click_here/: index.html
Survey/: DICTIONARY.xlsx  computations.xlsx
Survey/Clicca_qui/: index.html
Survey/data/: Q1_eng.csv  Q1_ita.csv  Q2_eng.csv  Q2_ita.csv  Q3_eng.csv  Q3_ita.csv  Q4_eng.csv  Q4_ita.csv  Q5_eng.csv  Q5_ita.csv  Q6_eng.csv  Q6_ita.csv  Q7_eng.csv  Q7_ita.csv
esp/07-10-wip/main/: main.c
esp/BW_esp/main/: CMakeLists.txt  (+1 more)
esp/MotorTesting/: CMakeLists.txt
esp/empty/: CMakeLists.txt
master_sonar/: BW_esp_SONAR.code-workspace  master_sonar.ino
yolo/: test_yolo.py  yolo_pose.py
yolo/pose_models/: movenet_singlepose_lightning.tflite  movenet_singlepose_thunder.tflite
(+88 files in other folders)
